Last step layout in figma

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,9 @@
     <main>
       @include('partials/main.html')
       @include('partials/catalog.html')
+      @include('partials/work.html')
+      @include('partials/example.html')
+      @include('partials/maps.html')
     </main>
     @include('partials/footer.html')
 </body>
